{
  "version": 4,
  "terraform_version": "1.13.2",
  "serial": 460,
  "lineage": "aa282a4e-7858-ac21-dd41-cf1b617dcc4f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-043e812973b9e0333",
            "arn": "arn:aws:ec2:us-east-2:162523333259:elastic-ip/eipalloc-043e812973b9e0333",
            "domain": "vpc",
            "id": "eipalloc-043e812973b9e0333",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-150-191-123.us-east-2.compute.amazonaws.com",
            "public_ip": "3.150.191.123",
            "public_ipv4_pool": "amazon",
            "region": "us-east-2",
            "tags": {
              "Name": "k8s-natgw"
            },
            "tags_all": {
              "Name": "k8s-natgw"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "k8s-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:162523333259:internet-gateway/igw-0f64ca880a5229fed",
            "id": "igw-0f64ca880a5229fed",
            "owner_id": "162523333259",
            "region": "us-east-2",
            "tags": {
              "Name": "k8s-igw"
            },
            "tags_all": {
              "Name": "k8s-igw"
            },
            "vpc_id": "vpc-0c2abffbb5792615e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.k8s-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "k8s-natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-043e812973b9e0333",
            "association_id": "eipassoc-04736ccc1a20cff20",
            "connectivity_type": "public",
            "id": "nat-00b5791e4ab6091a0",
            "network_interface_id": "eni-097f232f2e271a50e",
            "private_ip": "10.10.70.70",
            "public_ip": "3.150.191.123",
            "region": "us-east-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08d62207fdeff41c5",
            "tags": {
              "Name": "k8s-nat"
            },
            "tags_all": {
              "Name": "k8s-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.natgw",
            "aws_internet_gateway.k8s-igw",
            "aws_subnet.public-us-east-2a",
            "aws_vpc.k8s-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:162523333259:route-table/rtb-0eb9c730d72cac0d0",
            "id": "rtb-0eb9c730d72cac0d0",
            "owner_id": "162523333259",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00b5791e4ab6091a0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c2abffbb5792615e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "162523333259",
            "id": "rtb-0eb9c730d72cac0d0",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_eip.natgw",
            "aws_internet_gateway.k8s-igw",
            "aws_nat_gateway.k8s-natgw",
            "aws_subnet.public-us-east-2a",
            "aws_vpc.k8s-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:162523333259:route-table/rtb-0489405815061ee7c",
            "id": "rtb-0489405815061ee7c",
            "owner_id": "162523333259",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f64ca880a5229fed",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c2abffbb5792615e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "162523333259",
            "id": "rtb-0489405815061ee7c",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_internet_gateway.k8s-igw",
            "aws_vpc.k8s-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-us-east-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0594e5e5882fd1564",
            "region": "us-east-2",
            "route_table_id": "rtb-0eb9c730d72cac0d0",
            "subnet_id": "subnet-0603be87bc3b1c572"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.natgw",
            "aws_internet_gateway.k8s-igw",
            "aws_nat_gateway.k8s-natgw",
            "aws_route_table.private",
            "aws_subnet.private-us-east-2a",
            "aws_subnet.public-us-east-2a",
            "aws_vpc.k8s-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-us-east-2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ce09a3064e9d5cef",
            "region": "us-east-2",
            "route_table_id": "rtb-0eb9c730d72cac0d0",
            "subnet_id": "subnet-037dda6657f2bec59"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.natgw",
            "aws_internet_gateway.k8s-igw",
            "aws_nat_gateway.k8s-natgw",
            "aws_route_table.private",
            "aws_subnet.private-us-east-2b",
            "aws_subnet.public-us-east-2a",
            "aws_vpc.k8s-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-us-east-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01cc88b59124fa922",
            "region": "us-east-2",
            "route_table_id": "rtb-0489405815061ee7c",
            "subnet_id": "subnet-08d62207fdeff41c5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.k8s-igw",
            "aws_route_table.public",
            "aws_subnet.public-us-east-2a",
            "aws_vpc.k8s-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-us-east-2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-015e61c4c9eeb13a5",
            "region": "us-east-2",
            "route_table_id": "rtb-0489405815061ee7c",
            "subnet_id": "subnet-02e7b3ef32c38f3f5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.k8s-igw",
            "aws_route_table.public",
            "aws_subnet.public-us-east-2b",
            "aws_vpc.k8s-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kubecost_alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:162523333259:security-group/sg-0edcd811dba4bb9c8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0edcd811dba4bb9c8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Permitir HTTP desde cualquier lugar",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Permitir HTTPS desde cualquier lugar",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "kubecost-alb-sg-20250918211748402100000001",
            "name_prefix": "kubecost-alb-sg-",
            "owner_id": "162523333259",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kubecost-alb-sg"
            },
            "tags_all": {
              "Name": "kubecost-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c2abffbb5792615e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "162523333259",
            "id": "sg-0edcd811dba4bb9c8",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.k8s-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_alb_to_eks_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 9090,
            "id": "sgrule-3419154820",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-2",
            "security_group_id": "sg-0ab4700bd978f48ff",
            "security_group_rule_id": "sgr-0abed432bb923bfbe",
            "self": false,
            "source_security_group_id": "sg-0edcd811dba4bb9c8",
            "timeouts": null,
            "to_port": 9090,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eks_cluster.demo",
            "aws_iam_role.demo",
            "aws_iam_role_policy_attachment.demo-AmazonEKSClusterPolicy",
            "aws_security_group.kubecost_alb_sg",
            "aws_subnet.private-us-east-2a",
            "aws_subnet.private-us-east-2b",
            "aws_subnet.public-us-east-2a",
            "aws_subnet.public-us-east-2b",
            "aws_vpc.k8s-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-us-east-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:162523333259:subnet/subnet-0603be87bc3b1c572",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.10.0.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0603be87bc3b1c572",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "162523333259",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "private-us-east-2a",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private-us-east-2a",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0c2abffbb5792615e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "162523333259",
            "id": "subnet-0603be87bc3b1c572",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.k8s-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-us-east-2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:162523333259:subnet/subnet-037dda6657f2bec59",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.10.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-037dda6657f2bec59",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "162523333259",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "private-us-east-2b",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private-us-east-2b",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0c2abffbb5792615e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "162523333259",
            "id": "subnet-037dda6657f2bec59",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.k8s-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-us-east-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:162523333259:subnet/subnet-08d62207fdeff41c5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.10.64.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08d62207fdeff41c5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "162523333259",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "public-us-east-2a",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-us-east-2a",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0c2abffbb5792615e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "162523333259",
            "id": "subnet-08d62207fdeff41c5",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.k8s-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-us-east-2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:162523333259:subnet/subnet-02e7b3ef32c38f3f5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.10.96.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02e7b3ef32c38f3f5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "162523333259",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "public-us-east-2b",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-us-east-2b",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0c2abffbb5792615e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "162523333259",
            "id": "subnet-02e7b3ef32c38f3f5",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.k8s-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "k8s-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:162523333259:vpc/vpc-0c2abffbb5792615e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-03b257688895f7e9c",
            "default_route_table_id": "rtb-02446809abf776ec3",
            "default_security_group_id": "sg-06c1fe4ef98717d1c",
            "dhcp_options_id": "dopt-0413671f36ad309e3",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c2abffbb5792615e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02446809abf776ec3",
            "owner_id": "162523333259",
            "region": "us-east-2",
            "tags": {
              "Name": "k8s-vpc"
            },
            "tags_all": {
              "Name": "k8s-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}